--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- this is a comment -->
+
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="js/bootstrap.min.js"></script>
 </head>
@@ -18,22 +18,26 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12" align="center"><h1>Hello, World</h1></div>
+			<div class="col-sm-12" align="center"><h1>Kaitlyn Davis</h1></div>
 		</div>
 		<div class="row" align="center">
 			<div class="col-sm-4"><h2>Welcome</h2></div>
-			<div class="col-sm-4"><h2>Bootstrap</h2></div>
-			<div class="col-sm-4"><h2>Goodbye</h2></div>
+			<div class="col-sm-4"><h2>About Me</h2></div>
+			<div class="col-sm-4"><h2>Homework Links</h2></div>
 		</div>
 		<div class="row" align="center">
 			<div class="col-sm-4">
-				<p>Welcome to the Home Page!</p>
+				<p>Welcome to My Page!</p>
 			</div>
 			<div class="col-sm-4">
-				<p>Click the button below.</p>
-				<button type="button" class="btn btn-info">Click Me</button>
+				<p>My name is Kaitlyn.</p>
 			</div>
-			<div class="col-sm-4">Have a great day!</div>
+			<div class="col-sm-4">
+				<a href="kaitlyn21.github.io/homework-3">Homework 3</a><br>
+				<a href="kaitlyn21.github.io/homework-4">Homework 4</a><br>
+				
+			
+			</div>
 		</div>
 	</div>
 	
