--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 			<div class="col-sm-4">
 				<a href="kaitlyn21.github.io/homework-3">Homework 3</a><br>
 				<a href="kaitlyn21.github.io/homework-4">Homework 4</a><br>
+				<a href="kaitlyn21.github.io/homework-5">Homework 5</a><br>
+				<a href="kaitlyn21.github.io/hw5blog">Homework 5 Blog</a><br>
 				
 			
 			</div>
